Bug#35322 : Duplicate entries in unique index make check for uniqueness and insert atomic (exclusive lock on index level)

No test case for this bug: hard to make mysqltest compliant one 
,since it duplicates occured only under high concurrency in stress test.